--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@ant-design/icons": "^5.5.1",
     "@azure/msal-node": "^2.15.0",
     "@azure/msal-react": "^2.1.1",
     "@craco/craco": "^7.1.0",
