--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,10 +3,10 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@ant-design/icons": "^5.5.1",
     "@azure/msal-node": "^2.15.0",
     "@azure/msal-react": "^2.1.1",
     "@craco/craco": "^7.1.0",
+    "@fortawesome/fontawesome-free": "^6.7.1",
     "@mui/material": "^6.1.5",
     "@prisma/client": "^5.21.1",
     "@reduxjs/toolkit": "^2.3.0",
@@ -48,7 +48,7 @@
     "react-redux": "^9.1.2",
     "react-router": "^6.27.0",
     "react-router-dom": "^6.27.0",
-    "react-scripts": "5.0.1",
+    "react-scripts": "^5.0.1",
     "sequelize": "^6.37.5",
     "sequelize-cli": "^6.6.2",
     "styled-components": "^6.1.13",
@@ -85,6 +85,9 @@
   "devDependencies": {
     "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
     "autoprefixer": "^10.4.20",
+    "eslint-plugin-import": "^2.31.0",
+    "eslint-plugin-jsx-a11y": "^6.10.2",
+    "eslint-plugin-react": "^7.37.2",
     "postcss": "^8.4.47",
     "tailwindcss": "^3.4.14"
   }
