--- a/backend/package.json
+++ b/backend/package.json
@@ -1,10 +1,15 @@
 {
-  "name": "frontend",
-  "version": "0.1.0",
-  "private": true,
+  "name": "backend",
+  "version": "1.0.0",
+  "description": "",
+  "main": "index.js",
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
   "dependencies": {
-    "@ant-design/icons": "^5.5.1",
-    "@ant-design/plots": "^2.3.2",
     "@azure/msal-node": "^2.15.0",
     "@azure/msal-react": "^2.1.1",
     "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
@@ -20,9 +25,12 @@
     "@testing-library/user-event": "^13.5.0",
     "antd": "^5.21.5",
     "apollo-server": "^3.13.0",
+    "autoprefixer": "^10.4.20",
     "axios": "^1.7.7",
     "babel-loader": "^9.2.1",
     "bcrypt": "^5.1.1",
+    "body-parser": "^1.20.3",
+    "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
     "cypress": "^13.15.1",
     "date-fns": "^4.1.0",
@@ -37,14 +45,16 @@
     "jsonwebtoken": "^9.0.2",
     "lint-staged": "^15.2.10",
     "lodash": "^4.17.21",
-    "moment": "^2.30.1",
     "mongoose": "^8.7.3",
     "morgan": "^1.10.0",
+    "multer": "^1.4.5-lts.1",
+    "mysql2": "^3.11.3",
     "next": "^15.0.1",
     "nodemailer": "^6.9.15",
     "passport": "^0.7.0",
     "passport-jwt": "^4.0.1",
     "passport-oauth2": "^1.8.0",
+    "postcss": "^8.4.47",
     "prettier": "^3.3.3",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
@@ -55,40 +65,11 @@
     "sequelize": "^6.37.5",
     "sequelize-cli": "^6.6.2",
     "styled-components": "^6.1.13",
+    "tailwindcss": "^3.4.14",
     "web-vitals": "^2.1.4",
     "webpack": "^5.95.0",
     "webpack-cli": "^5.1.4",
     "winston": "^3.15.0",
     "yup": "^1.4.0"
-  },
-  "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
-  },
-  "eslintConfig": {
-    "extends": [
-      "react-app",
-      "react-app/jest"
-    ]
-  },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
-  },
-  "devDependencies": {
-    "autoprefixer": "^10.4.20",
-    "babel-jest": "^24.9.0",
-    "postcss": "^8.4.49",
-    "tailwindcss": "^3.4.17"
   }
 }
